New in v0.13.6 (2005/??/??)
---------------------------

Added fix for listing/restoring certain bad archives made when there
was a timezone bug.  (Thanks to Stephen Isard)

************** Serious bug fix ******************
If a directory in the source directory was replaced by certain
symlinks, then if later backups failed they could cause files in the
directory that the symlink pointed to to be deleted!  Much thanks to
Alistair Popple for pointing this bug out and providing a test case.


New in v0.13.5 (2005/03/28)
---------------------------

Added error-correcting fsync suggestion by Antoine Perdaens.
rdiff-backup may work better with NFS now.

Fix by Dean Gaudet for --calculate-average mode (it broke somewhere in
0.13.x).

Fix for regress warning code:  rdiff-backup should warn you if you are
trying to back up a directory into itself.

Fix for restoring certain directories when not run as root.

Now when determining group permissions check supplementary groups as
well as main group.  (Bug report by Ryan Castle.)

Fixed bug which could cause crash when backing up 3 or more hard
linked files and the first gets deleted during processing.  (Thanks to
Dean Gaudet for bug report.)

Fixed user/group restoring error noticed by Fran Firman.

Checked in Robert Shaw's --chars-to-quote patch

Treated hard link permission problem on Mac OS X by applying
suggestion by David Vasilevsky

Dean Gaudet's patch fixes "--restrict /" option.

Added Robert Shaw's --exclude-fifo, --include-symbolic-links,
etc. options.

Added Maximilian Mehnert's fix for too many open files bug.


New in v0.13.4 (2004/01/31)
---------------------------

Checked in patch by John Goerzen to support Mac OS X Finder
information.  As John says:
> Specifically, it adds storage of:
> 
>  * 4-byte creator
>  * 4-byte type
>  * integer flags
>  * dual integer location
Much thanks to John for adding this useful feature all by himself!

Added --compare and --compare-at-time switches for comparing a